Bug 345339 - "Detect window properties" in window rule dialog crashes System Settings
Summary: "Detect window properties" in window rule dialog crashes System Settings
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: rules (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-19 15:28 UTC by Eike Hein
Modified: 2015-03-20 07:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2015-03-19 15:28:17 UTC
Program received signal SIGSEGV, Segmentation fault.
xcb_get_setup (c=0x0) at xcb_conn.c:291
291         if(c->has_error)
(gdb) bt
#0  xcb_get_setup (c=0x0) at xcb_conn.c:291
#1  0x00007fffd0c76370 in KWin::defaultScreen ()
    at /home/sho/devel/src/kde/workspace/kwin/libkwineffects/kwinglobals.h:174
#2  0x00007fffd0c6d972 in KWin::X11Cursor::createCursor (this=0xfa0cc0, name=...)
    at /home/sho/devel/src/kde/workspace/kwin/kcmkwin/kwinrules/../../cursor.cpp:358
#3  0x00007fffd0c6d93f in KWin::X11Cursor::getX11Cursor (this=0xfa0cc0, name=...)
    at /home/sho/devel/src/kde/workspace/kwin/kcmkwin/kwinrules/../../cursor.cpp:348
#4  0x00007fffd0c6d8ae in KWin::X11Cursor::getX11Cursor (this=0xfa0cc0,
    shape=Qt::CrossCursor)
    at /home/sho/devel/src/kde/workspace/kwin/kcmkwin/kwinrules/../../cursor.cpp:339
#5  0x00007fffd0c6cfbb in KWin::Cursor::x11Cursor (shape=Qt::CrossCursor)
    at /home/sho/devel/src/kde/workspace/kwin/kcmkwin/kwinrules/../../cursor.cpp:168
#6  0x00007fffd0c79c9e in KWin::DetectDialog::selectWindow (this=0xcb2630)
    at /home/sho/devel/src/kde/workspace/kwin/kcmkwin/kwinrules/detectwidget.cpp:186
#7  0x00007fffd0c7d1f4 in KWin::DetectDialog::qt_static_metacall (_o=0xcb2630,
    _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xcbaaa0)
    at /home/sho/devel/build/kde/workspace/kwin/kcmkwin/kwinrules/moc_detectwidget.cpp:147
#8  0x00007ffff38d20c1 in QMetaCallEvent::placeMetaCall (this=0xf99860,
    object=0xcb2630) at kernel/qobject.cpp:485
#9  0x00007ffff38d318a in QObject::event (this=0xcb2630, e=0xf99860)
    at kernel/qobject.cpp:1245
#10 0x00007ffff49d137a in QWidget::event (this=0xcb2630, event=0xf99860)
    at kernel/qwidget.cpp:9099
#11 0x00007ffff49806bc in QApplicationPrivate::notify_helper (this=0x676c10,
    receiver=0xcb2630, e=0xf99860) at kernel/qapplication.cpp:3720
#12 0x00007ffff4980529 in QApplication::notify (this=0x7fffffffd330,
    receiver=0xcb2630, e=0xf99860) at kernel/qapplication.cpp:3685
#13 0x00007ffff3896772 in QCoreApplication::notifyInternal (this=0x7fffffffd330,  

Reproducible: Always
Comment 1 Thomas Lübking 2015-03-19 17:44:44 UTC
Says you lost the xcb connection.
=> https://git.reviewboard.kde.org/r/123025/ as well?
Comment 2 Eike Hein 2015-03-19 17:50:11 UTC
Maybe, I was running unpatched.
Comment 3 Thomas Lübking 2015-03-19 17:51:57 UTC
After you tried and ensure the patch is helpfull, i'll boldly advertise
http://kde-look.org/content/show.php/Cursor+theme+"fixing"+script?content=161037 to complete your cursor theme(s)
Comment 4 Martin Flöser 2015-03-20 07:12:31 UTC
I rather think it's a regression due to the changes around usage of QX11Info I pushed this week.
Comment 5 Martin Flöser 2015-03-20 07:20:49 UTC
Git commit 305387ec3a12cbcc692a81fa8795a996702b32c5 by Martin Gräßlin.
Committed on 20/03/2015 at 07:19.
Pushed by graesslin into branch 'master'.

[kcmkwin/rules] Set dynamic property for x11Connection and x11RootWindow

Needed by kwinglobals which gets used internally through DetectWidget.

M  +5    -0    kcmkwin/kwinrules/kcm.cpp

http://commits.kde.org/kwin/305387ec3a12cbcc692a81fa8795a996702b32c5