[kcmkwin/rules] Set dynamic property for x11Connection and x11RootWindow

Needed by kwinglobals which gets used internally through DetectWidget.

BUG: 345339